handle bugs